--- a/dos33.html
+++ b/dos33.html
@@ -7877,7 +7877,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
                     261     FIN
                     262     LST ON
 3E6A:60             263             RTS
-3E6B:85 2A          264 <a class='f' id='3E6B' name='MYSEEK2'     >MYSEEK2     </a>STA TRK         ;SAVE DESTINATION TRACK(*2)     ;
+3E6B:85 2A          264 <a class='f' id='3E6B' name='MYSEEK2'     >MYSEEK2     </a>STA TRKN        ;SAVE DESTINATION TRACK(*2)     ;
 3E6D:20 8E 3E       265             JSR XTOY        ;SET Y=SLOT#
 3E70:B9 78 04       266             LDA DRV1TRK,Y
 3E73:24 35          267             BIT DRIVNO
