--- a/dos33.html
+++ b/dos33.html
@@ -1632,7 +1632,7 @@ With that "legalese" out of the way ... enjoy the read!
                     00569 196 <a class='f' id='1E45' name='INITF'    >INITF       </a>EQU *
 1E45:AD 62 2A       00570 197 <meta                                 />            LDA <a class='v' href='#SVCMD'>SVCMD</a>
 1E48:F0 06          00571 198 <meta                                 />            BEQ <a class='x' href='#INITG'>INITG</a>
-1E4A:8d 5F 2A       00572 199 <a class='f' id='1E4A' name='INITF1'   >INITF1      </a>STA CMDNO
+1E4A:8d 5F 2A       00572 199 <a class='f' id='1E4A' name='INITF1'   >INITF1      </a>STA <a class='v' href='#CMDNO'>CMDNO</a>
 1E4D:4C 80 21       00573 200 <meta                                 />            JMP <a class='x' href='#CMDGO1'>CMDGO1</a>
                     00574 201 <a class='f' id='1E50' name='INITG'    >INITG       </a>EQU *
 1E50:60             00575 202 <meta                                 />            RTS
@@ -1653,10 +1653,10 @@ With that "legalese" out of the way ... enjoy the read!
 1E6B:4C 51 28       00590 217             JMP <a class='x' href='#MVCSW' >MVCSW</a>                                       ; $3EA: Set CIN/COUT to DOS
 1E6E:EA             00591 218             NOP                                             ; $3ED: [.. Normally, this would be <a class='mem' name='_1E6E' coords='2'>wastes</a> 2 bytes -- NEVER used anywhere
 1E6F:EA             00592 219             NOP                                             ;       ... HOWEVER they ARE needed since they are used as padding to align the following BRK IRQ vector.
-                                                                                    ;       ... Diversi-DOS has: 3ED: 4C DF BC  JMP $BCDF
-                                                                                    ;       ..] Thanks Tommy for the insight!
+                                                                                         ;       ... Diversi-DOS has: 3ED: 4C DF BC  JMP $BCDF
+                                                                                         ;       ..] Thanks Tommy for the insight!
 1E70:4C 59 FA       00593 220             JMP <a class='e' href='#MONBRK'>MONBRK</a>                                      ; $3EF: JMP $FA59 Autostart BRK handler.
-                                                                                    ;       <b>Note:</b> This is never directly called as the Autostart ROM reads the address at $3F0, $3F1 via $FA56: 6C F0 03 <span class='code'>JMP (BRKV)</span>
+                                                                                         ;       <b>Note:</b> This is never directly called as the Autostart ROM reads the address at $3F0, $3F1 via $FA56: 6C F0 03 <span class='code'>JMP (BRKV)</span>
 1E73:4C 65 FF       00594 <a class='line' name='DOSINIT.221'>221</a>             JMP <a class='e' href='#MONRST'>MONRST</a>                                      ; $3F2: $9DBF,$38 Control-Reset - Why not <span class='code'>DW DBRST</span>, <span class='code'>DB $#&gt;DBRST ^ $A5</span> ??? Line #<a class='line' href='#DOSINIT.191'>191</a>
 1E76:4C 58 FF       00595 222             JMP <a class='e' href='#IORTS' >IORTS</a>                                       ; $3F5: JMP $FF58 Ampersand handler
 1E79:4C 65 FF       00596 223             JMP <a class='e' href='#MONRST'>MONRST</a>                                      ; $3F8: JMP $FF65 Ctrl-Y handler
@@ -1693,45 +1693,45 @@ With that "legalese" out of the way ... enjoy the read!
                     023 <a class='f' id='1EA6' name='CHIN2'    >CHIN2       </a>EQU *
 1EA6:A9 03          024             LDA #<span class='n'>3</span>          ; SET OUT CHAR                   ; <a class='magic' name='_1EA6'>magic number</a> COS_INPUT_ECHO = 3
 1EA8:8D 52 2A       025             STA OSTATE      ; STATE TO INPUT ECHO
-1EAB:20 BA 1F       026             JSR LDREGS
-1EAE:20 BA 1E       027             JSR GETIN
-1EB1:8D 5C 2A       028             STA SVA         ; SAVE CHAR &amp; INDEX
-1EB4:8E 5A 2A       029             STX SVX
-1EB7:4C B3 1F       030             JMP ORTN
+1EAB:20 BA 1F       026             JSR <a class='x' href='#LDREGS'>LDREGS</a>
+1EAE:20 BA 1E       027             JSR <a class='x' href='#GETIN'>GETIN</a>
+1EB1:8D 5C 2A       028             STA <a class='v' href='#SVA'>SVA</a>         ; SAVE CHAR &amp; INDEX
+1EB4:8E 5A 2A       029             STX <a class='v' href='#SVX'>SVX</a>
+1EB7:4C B3 1F       030             JMP <a class='x' href='#ORTN'>ORTN</a>
                     031 ;
 1EBA:6C 38 00       032 <a class='f' id='1EBA' name='GETIN'    >GETIN       </a>JMP (<a class='v' href='#INSW'>INSW</a>)
                     033 ;
                     034 ;CHROUT - CHAR RCVD VIA OUTPUT SWITCH
                     035 ;
                     036 <a class='f' id='1EBD' name='CHROUT'   >CHROUT      </a>EQU *
-1EBD:20 D1 1E       037             JSR SVREGS      ; SAVE REGS
+1EBD:20 D1 1E       037             JSR <a class='x' href='#SVREGS'>SVREGS</a>      ; SAVE REGS
                     038 ;
-1EC0:AD 52 2A       039             LDA OSTATE      ; GET OUT SPARE
+1EC0:AD 52 2A       039             LDA <a class='v' href='#OSTATE'>OSTATE</a>      ; GET OUT SPARE
 1EC3:0A             040             ASL A
 1EC4:0A             041             TAX
-1EC5:BD 11 1D       042             LDA OUTSVT1+<span class='n'>1</span>,X ; GET ROUTINE ADR
+1EC5:BD 11 1D       042             LDA <a class='v' href='#OUTSVT1'>OUTSVT1</a>+<span class='n'>1</span>,X ; GET ROUTINE ADR
 1EC8:48             043             PHA
-1EC9:BD 10 1D       044             LDA OUTSVT+<span class='n'>1</span>,X
+1EC9:BD 10 1D       044             LDA <a class='v' href='#OUTSVT'>OUTSVT</a>+<span class='n'>1</span>,X
 1ECC:48             045             PHA
-1ECD:AD 5C 2A       046             LDA SVA
+1ECD:AD 5C 2A       046             LDA <a class='v' href='#SVA'>SVA</a>
 1ED0:60             047             RTS             ; GO TO ROUTINE
                     048 ;
                     049 ;SVREGS - SAVE REGS WHILE PROCESSING CHARS
                     050 ;
                     051 <a class='f' id='1ED1' name='SVREGS'   >SVREGS      </a>EQU *
-1ED1:8D 5C 2A       052             STA SVA         ; SAVE ACU                      ; Captain Obvious to the rescue!<hr class='page'>
+1ED1:8D 5C 2A       052             STA <a class='v' href='#SVA'>SVA</a>         ; SAVE ACU                      ; Captain Obvious to the rescue!<hr class='page'>
                     053 <a class='f' id='1ED4' name='SVRGSA'   >SVRGSA      </a>EQU *                                           ; === Page <a class='page' name='page45'>45</a> === SaveRegsA, uh, NO, SaveRegsXY, we _already_ saved A; this is why using <span class='code'>nameA</span> <span class='code'>nameB</span> are bad.
-1ED4:8D 5A 2A       054             STX SVX         ; SAVE X                        ; More crap names. Good variable naming such as <span class='code'>SAVEX</span> and <span class='code'>SAVEY</span>
-1ED7:8C 5B 2A       055             STY SVY         ; SAVE Y                        ; negates the need for these <b>useless redundant</b> comments.
+1ED4:8D 5A 2A       054             STX <a class='v' href='#SVX'>SVX</a>         ; SAVE X                        ; More crap names. Good variable naming such as <span class='code'>SAVEX</span> and <span class='code'>SAVEY</span>
+1ED7:8C 5B 2A       055             STY <a class='v' href='#SVY'>SVY</a>         ; SAVE Y                        ; negates the need for these <b>useless redundant</b> comments.
 1EDA:BA             056             TSX             ;SAVE STACK POINTER
 1EDB:E8             057             INX
 1EDC:E8             058             INX             ;ADJUST IT TO ORIGINAL
-1EDD:8E 59 2A       059             STX SVSTK
+1EDD:8E 59 2A       059             STX <a class='v' href='#SVSTK'>SVSTK</a>
 1EE0:A2 03          060             LDX #<span class='n'>3</span>          ; SET FOR FOUR BYTE MOVE        ; /sarcasm If only we could read assembly ...
 1EE2:BD 53 2A       061 <a class='f' id='1EE2' name='SVRB'     >SVRB        </a>LDA SVOUTS,X    ; MOVE SAVED OUT AND IN SW      ; SVRB = <b class='f'>S</b>a<b class='f'>V</b>e <b class='f'>R</b>egs <b class='f'>B</b>, /sarcasm <i>What,</i> <span class='code'>SVRGSB</span> <i>wasn't available???</i> (A. It is.)
-1EE5:95 36          062             STA OUTSW,X     ; TO APPLE OUT/IN SW
+1EE5:95 36          062             STA <a class='v' href='#OUTSW'>OUTSW</a>,X     ; TO APPLE OUT/IN SW
 1EE7:CA             063             DEX
-1EE8:10 F8          064             BPL SVRB
+1EE8:10 F8          064             BPL <a class='x' href='#SVRB'>SVRB</a>
 1EEA:60             065             RTS             ; DONE                          ; Can someone please put Captain Obvious out of _our_ misery?
                     066             PAGE
                     067 ;
